--- a/templates/js_templates.jade
+++ b/templates/js_templates.jade
@@ -1,6 +1,22 @@
 script(id="home_view", class="handlebars", type="text/x-handlebars-template")
   h2 Welcome!
 
+script(id="login_view", class="handlebars", type="text/x-handlebars-template")
+  .span12
+    legend Login
+    form.form-horizontal
+      .control-group
+        label.control-label Email
+        .controls
+          input(type="text", placeholder="Email")
+      .control-group
+        label.control-label Password
+        .controls
+          input(type="password", placeholder="Password")
+      .control-group
+        .controls
+          button.btn(type="submit") Sign in
+
 script(id="logged_out_nav", class="handlebars", type="text/x-handlebars-template")
   li
     a(href="#!/login/") Login
