start work on login handler

--- a/templates/js_templates.jade
+++ b/templates/js_templates.jade
@@ -8,11 +8,11 @@ script(id="login_view", class="handlebars", type="text/x-handlebars-template")
       .control-group
         label.control-label Email
         .controls
-          input(type="text", placeholder="Email")
+          input(type="text", name="email", placeholder="Email")
       .control-group
         label.control-label Password
         .controls
-          input(type="password", placeholder="Password")
+          input(type="password", name="password", placeholder="Password")
       .control-group
         .controls
           button.btn(type="submit") Sign in
